--- a/DuplicatePhotoFinder/DuplicatePhotoFinder.csproj
+++ b/DuplicatePhotoFinder/DuplicatePhotoFinder.csproj
@@ -80,9 +80,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Utilities\Converters\BooleanConverters.cs" />
     <Compile Include="Utilities\ExtensionMethods.cs" />
     <Compile Include="Utilities\UICommand.cs" />
-    <Compile Include="Utilities\VisibilityConverter.cs" />
+    <Compile Include="Utilities\Converters\VisibilityConverter.cs" />
     <Compile Include="ViewModel\DuplicatePhotoViewModel.cs" />
     <Compile Include="ViewModel\PhotoViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
